Refactor jvm props filter and add more tests